lab9/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: engineering-lab9
  namespace: engineering-lab9
spec:
  ingressClassName: nginx
  rules:
    - host: engineering.lab9.zelenkov-labs.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: engineering-lab9-app
                port:
                  number: 80
